--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ body{
 
 .pacman {
   position: relative;
-  animation: pacman 7s infinite;
+  animation: pacman 10s infinite;
 }
 
 p{
@@ -53,93 +53,126 @@ p{
 }
 
 /*Telefono movil desgraciade*/
-@media screen and (min-width: 320px) and (max-width: 324px) {
+@media screen and (min-width:570px) and (max-width:576px) {
 
     body {
     background-color: #ce20d1;
     }
 
     .alturapacman {
-        width: 14px;
-        height: 14px;
+        width: 20px;
+        height: 20px;
     }
 
   @keyframes pacman {
-    0% {top:85px; left: 31px; background-color: #20cbd1;}
-    5% {top:40px; left: 31px;background-color: #3dc141;}
-    10% {top:40px; left: 61px; background-color: #d12020;}
-    15% {top:98px; left:61px; background-color: #e8af45;}
-    20% {top:98px; left: 104px; background-color:#FFB8FF}
-    25% {top: 113px; left:104px; background-color:aliceblue;}
-    30% {top: 113px; left:120px; background-color:aqua;}
-    35% {top: 128px; left: 120px; background-color:black;}
-    40% {top: 128px; left: 164px; background-color:blue;}
-    45% {top: 113px; left: 164px; background-color:blueviolet;}
-    50% {top: 113px; left: 178px; background-color:brown;}
-    55% {top: 98px; left: 178px; background-color:chartreuse;}
-    60% {top: 98px; left:222px; background-color:coral;}
-    65% {top: 40px; left:222px; background-color: cornflowerblue;}
-    70% {top: 40px; left:254px; background-color:crimson;}
-    75% {top: 85px; left:254px; background-color:coral;}
+    0% {top:160px; left:68px; background-color: #20a5d1;}
+    5% {top:82px; left:68px; background-color: #d12020;}
+    10% {top:82px; left:120px; background-color: #5ed120;}
+    15% {top:187px; left:120px; background-color: #d12087;}
+    20% {top:187px; left:200px; background-color: #2920d1;}
+    25% {top:165px; left:152px; background-color: #d1cb20;}
+    30% {top:165px; left:174px; background-color: #32d120;}
+    35% {top:187px; left:174px; background-color: #d16d20;}
+    40% {top:187px; left:236px; background-color: #f700ff;}
+    45% {top:165px; left:236px; background-color: #497483;}
+    50% {top:165px; left:258px; background-color: #20a5d1;}
+    55% {top:145px; left:258px; background-color: #431313;}
+    60% {top:145px; left:320px; background-color: #000000;}
+    65% {top:60px; left:320px; background-color: #ffffff;}
+    70% {top:60px; left:363px; background-color: #9d42b9;}
+    75% {top:120px; left:363px; background-color: #695a70;}
 }
 }
 
-@media screen and (min-width: 325px) and (max-width: 328px) {
+@media screen and (min-width: 577px) and (max-width: 579px) {
 
   body {
     background-color: #20a5d1;
     }
   
     .alturapacman {
-        width: 14px;
-        height: 14px;
+        width:20px;
+        height:20px;
     }
 
   @keyframes pacman {
-    0% {top:80px; left:33px; background-color: #20cbd1;}
-    5% {top:40px; left:33px;background-color: #3dc141;}
-    10% {top:40px; left:63px; background-color: #d12020;}
-    15% {top:101px; left:63px; background-color: #e8af45;}
-    20% {top:101px; left:107px; background-color:#FFB8FF}
-    25% {top:116px; left:107px; background-color:aliceblue;}
-    30% {top:116px; left:122px; background-color:aqua;}
-    35% {top:129px; left:122px; background-color:black;}
-    40% {top:129px; left:167px; background-color:blue;}
-    45% {top:115px; left:167px; background-color:blueviolet;}
-    50% {top:115px; left:182px; background-color:brown;}
-    55% {top:100px; left:182px; background-color:chartreuse;}
-    60% {top:100px; left:227px; background-color:coral;}
-    65% {top:40px; left:227px; background-color: cornflowerblue;}
-    70% {top:40px; left:258px; background-color:crimson;}
-    75% {top:80px; left:258px; background-color:coral;}
+    0% {top:120px; left:50px}
+    5% {top:61px; left:50px}
+    10% {top:61px; left:92px}
+    15% {top:147px; left:92px}
+    20% {top:147px; left:155px}
+    25% {top:167px; left:155px}
+    30% {top:167px; left:175px}
+    35% {top:188px; left:175px}
+    40% {top:188px; left:238px}
+    45% {top:165px; left:238px}
+    50% {top:165px; left:260px}
+    55% {top:145px; left:260px}
+    60% {top:145px; left:322px}
+    65% {top:62px; left:322px}
+    70% {top:62px; left:365px}
+    75% {top:120px; left:365px}
 }
 }
 
-@media screen and (min-width: 329px) and (max-width: 335px) {
+@media screen and (min-width:480px) and (max-width: 483px) {
 
   body {
-  background-color: #d12020;
-  }
-  .alturapacman {
-      width: 14px;
-      height: 14px;
-  }
+    background-color: red;
+    }
+  
+    .alturapacman {
+        width: 19px;
+        height: 19px;
+    }
 
   @keyframes pacman {
-    0% {top:90px; left: 36px; background-color: #20cbd1;}
-    5% {top:50px; left: 36px;background-color: #3dc141;}
-    10% {top:50px; left: 70px; background-color: #d12020;}
-    15% {top:115px; left:70px; background-color: #e8af45;}
-    20% {top:115px; left: 123px; background-color:#FFB8FF}
-    25% {top: 133px; left:123px; background-color:aqua;}
-    35% {top: 133px; left: 139px; background-color:black;}
-    40% {top: 150px; left: 139px; background-color:blue;}
-    45% {top: 150px; left: 190px; background-color:blueviolet;}
-    50% {top: 135px; left: 190px; background-color:brown;}
-    55% {top: 135px; left: 210px; background-color:chartreuse;}
-    60% {top: 120px; left:210px; background-color:coral;}
-    65% {top: 120px; left:260px; background-color: cornflowerblue;}
-    70% {top: 50px; left:260px; background-color:crimson;}
+    0% {top:120px; left:51px}
+    5% {top:63px; left:51px}
+    10% {top:63px; left:94px}
+    15% {top:148px; left:94px}
+    20% {top:148px; left:157px}
+    25% {top:170px; left:157px}
+    30% {top:170px; left:179px}
+    35% {top:190px; left:179px}
+    40% {top:190px; left:241px}
+    45% {top:167px; left:241px}
+    50% {top:167px; left:262px}
+    55% {top:146px; left:262px}
+    60% {top:146px; left:325px}
+    65% {top:62px; left:325px}
+    70% {top:62px; left:370px}
+    75% {top:120px; left:370px}
+}
+}
 
+@media screen and (min-width:464px) and (max-width: 470px) {
+
+  body {
+    background-color: rgb(89, 255, 0);
+    }
+  
+    .alturapacman {
+        width: 19px;
+        height: 19px;
+    }
+
+  @keyframes pacman {
+    0% {top:120px; left:51px; background-color: #20a5d1;}
+    5% {top:63px; left:51px; background-color: #ce20d1;}
+    10% {top:63px; left:94px;}
+    15% {top:150px; left:94px; background-color: aqua;}
+    20% {top:160px; left:158px; background-color: rgb(255, 0, 0);}
+    25% {top:170px; left:158px; background-color: rgb(255, 166, 0);}
+    30% {top:170px; left:177px; background-color: rgb(106, 255, 0);}
+    35% {top:195px; left:177px; background-color: rgb(0, 153, 255);}
+    40% {top:195px; left:245px; background-color: rgb(0, 4, 255);}
+    45% {top:170px; left:245px; background-color: rgb(85, 0, 255);}
+    50% {top:170px; left:270px; background-color: rgb(217, 0, 255);}
+    55% {top:150px; left:265px; background-color:darkgrey}
+    60% {top:150px; left:330px; background-color: rgb(255, 0, 81);}
+    65% {top:62px; left:330px; background-color: pink}
+    70% {top:62px; left:373px; background-color: orange}
+    75% {top:120px; left:373px; background-color: olivedrab}
 }
 }
